78-fixed redirect error from converter. updated layout of input pages and converter for responsiveness. dummy for spacing on step tabs. various responsiveness adjustments

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,6 +1,3 @@
-// Header
-
-
 // Colors
 $nav-hover-color: #25A793;
 $nav-font-color: white;
@@ -58,7 +55,7 @@ $nav-border-radius: 25px;
 	font-weight: $brand_font_weight_bold;
     color: $nav-font-color;
     text-shadow: 0px 1px 4px rgba(0,0,0,0.10);
-	
+
     @include hover-animation(color);
     a, a:hover {
         text-decoration: none;
@@ -311,4 +308,10 @@ $nav-border-radius: 25px;
 .header-dummy {
 	height: 83px;
 	width: 100%;
+}
+
+.tabs-wrapper-dummy {
+	height: 50px;
+	width: 100%;
+	background-color: $light_bg_green;
 }
